Adding homepage in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: baasbox
 version: 0.0.1
 author: Giovanni Laquidara <glaquidara@gmail.com>
+homepage: https://github.com/joaobiriba/baasbox-dart-sdk
 description: BaasBox-Dart-SDK
